src/web_version/styling/style.css
/* Most of the styling done is through the use of classes of Bootstrap,
please look for its documentation online if necessary */

* {
    font-family: 'Poppins', sans-serif;
}

body {
    background-color: #00a19936;
}

h1{
    text-align: center;
}

table,
th,
td {
    border: 1px solid black;
    background-color: white;
}

legend {
    font-weight: bold;
    /* displace them on the corner left like in the swing version */
}

button:focus {
    outline: none;
}

.btn-primary{
    background-color: #24A1EB;
}

.form-check > label {
    translate: -11px 20px;
    min-width: 100%;
}

#lang_switch{
    margin: 10px;
    position: absolute;
    right: 0;
    justify-self: flex-end;
}

#menu_btn_navbar{
    width: 100%;
    top: 0;
    right: 0;
    justify-content: flex-start;
}

#menu_btn_navbar > .btn{
    margin-inline: 10px;
}

#home_btn_grp{
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    height: 80%;
}

#navbarTabs {
    position: fixed;
    top: 0;
    left: 0;
    max-width: 40em;
    height: 100%;
    padding-top: 3em;
    background: linear-gradient(120deg, rgba(249,187,18,1) 0%, rgba(0,161,154,1) 50%, rgba(36,161,235,1) 100%);
    z-index: 50;
    transform: translateX(-100%);
    transition: 0.5s;
}

#navbarTabs > .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
    color: #1A182D;
  }

.nav-tab {
    margin: 10px;
    min-width: 150px;
    width: 97%;
    min-height: 80px;
    height: fit-content;
    border: none!important;
    background-color: #ffffff70;
}

.tab {
    padding: 10px;
}

.curr-tab {
    background-color: #ffffffd9;
}

.navbar-nav {
    justify-content: space-evenly;
    align-items: center;
}

#navbarTabs.collapsing > .navbar-nav > .nav-tab,
#navbarTabs.show > .navbar-nav > .nav-tab {
    min-height: 50px;    
}

#overall_canvas {
    margin: 50px;
}

.list-group-flush{
    width: fit-content;
    margin: auto;
}

.probs_steps{
    vertical-align: middle!important;
    height: fit-content;
    border: 1px solid black!important;
}

#bubbles_speech{
    position: relative;
    display: inline-block;
    height: 105%;
}

.overlay-text{
    position: absolute;
    top: 0;
    left: 0;
    transform: translate(0%, 0%);
    width: 400px;
}

.overlay-text#left{
    transform: translate(50%, 145%);
}

.overlay-text#right{
    transform: translate(260%, 160%);
}

#goal_example_multi{
    width: 800px;
    place-self: center;
}

#interacting{
    width: 80%;
    margin-inline: auto;
}

.int_btn{
    margin-block: 10px;
    max-width: 200px;
}

#YBALLS{
    color:#eacd00;
}

#RBALLS{
    color:red;
}

.card {
    box-shadow: black 5px 4px 10px 0px;
    min-width: auto;
    height: fit-content;
    margin: 20px;
    align-items: center;
    background: #eefffe;
}

.card-img-top{
    width: fit-content;
    height: fit-content;
    margin-top: 7px;
    border: 8px solid;
    border-image: linear-gradient(180deg, #F9BB12, #00A19A, #24A1EB) 1;
    box-shadow: black 0 2px 7px 0px;
}

#param_baskets_main_pic{
    border: none;
    box-shadow: none;
    position: absolute;
    left: 15;
    top: 15;
}

.card-body{
    width: fit-content;
    height: fit-content;
}

#adaptation{
    display: grid;
    grid-gap: 10px;
    grid-template-columns: 60vw 35vw;
    grid-template-rows: 250px 12vw;
    grid-template-areas:
        "status parameters"
        "visualization parameters"
        "visualization ."
        "score score";
}

#adaptation.grid_modified{
    grid-template-areas:
        "status parameters"
        "interval parameters"
        "visualization parameters"
        "visualization ."
        "score score";
}

#adapt_visualization, #adapt_score, #adapt_game_status, #adapt_param, #adapt_nonstop_speed{
    background-color: white;
    border: 1px solid black;
    border-radius: 20px;
    padding: 20px;
    margin: 10px;
    max-width: 55vw;
}

#adapt_game_status{
    grid-area: status;
}

#adapt_history{
    overflow-y: auto;
    max-height: 150px;
}

#adapt_nonstop_speed{
    grid-area: interval;
}

#adapt_visualization{
    min-height: 60%;
    min-width: 60%;
    grid-area: visualization;
}

#adapt_score{
    grid-area: score;
    height: fit-content;
}

#adapt_score > .progress{
    height: 50px;
}

#adapt_param{
    grid-area: parameters;
    max-width: 35vw;
    height: fit-content;
}

input[type=range].form-control {
    border: none!important;
}

.basket_drawing {
    margin-inline: 10px;
    margin-block: 30px;
}

.div_balls {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    border: black solid 1pt;
}

.badge_nb_basket {
    translate: -90px 180px;
}

.badge_nb_color {
    translate: 0 200px;
}

.badge_shadow {
    box-shadow: black 0 2px 7px 0px;
}

.yellow_counter {
    background-color: #eacd00;
}

.red_counter {
    background-color: red;
}

.blue_counter {
    background-color: blue;
}

.green_counter {
    background-color: green;
}

.purple_counter {
    background-color: purple;
}

@media screen and (max-width: 1000px) {
    #adaptation{
        grid-template-columns: 100vw;
        grid-template-rows: auto;
    }
    #adapt_game_status, #adapt_visualization, #adapt_score, #adapt_param, #adapt_nonstop_speed{
        max-width: 95%;
        min-height: 100%;
    }
    #adapt_game_status{
        grid-column: 1;
        grid-row: 1;
        min-width: auto;
    }
    #adapt_nonstop_speed{
        grid-column: 1;
        grid-row: 2;
    }
    #adapt_visualization{
        grid-column: 1;
        grid-row: 3;
    }
    #adapt_param{
        grid-column: 1;
        grid-row: 4;
    }
    #adapt_score{
        grid-column: 1;
        grid-row: 5;
    }
}

